homeworks/hw_prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: myshop-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: myshop
    template:
       metadata:
          labels:
             app: myshop
       spec:
          containers:
          - name: myshop
            image: bael/ms-course-hw1:v3
            ports:
              - name: web 
                containerPort: 8000
            livenessProbe:
              httpGet:
                path: /health
                port: web
              failureThreshold: 1
              periodSeconds: 10
            readinessProbe:
              httpGet:
                port: web
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
            startupProbe:
              httpGet:
                path: /health
                port: web
              failureThreshold: 30
              periodSeconds: 10
